@@ -1,4 +1,5 @@
 Sigil v0.1.5 <ADD DATE>
+    - tentatively fixed an issue with Sigil crashing on overwriting existing epubs (issue 146)
     - fixed an issue with Sigil crashing on epubs with "date" OPF elements but no value set
     for those elements (InDesign CS4 creates such invalid epubs) (issue #149)
     - fixed an issue with words being merged on TXT import (issue #148)
@@ -89,7 +90,7 @@ Sigil v0.1.2 2009.08.12.
     - Sigil now creates a guide element with a cover page in the OPF if the content of the first
     OPS document is less than 1000 characters long (issue #48)
     - support for importing UTF-16 encoded documents (not just UTF-8)
-    - provided install target for linux; the binary is now also named "sigil"
+    - provided install target for Linux; the binary is now also named "sigil"
     (lower case 's') on Unix systems (except Mac) for the sake of convention (issue #46)
     - removed dependency on "data" directory (issue #51)
 
